plugins {
    id 'java'
}

group = 'io.github.HenriqueMichelini'
version = '0.1.8'

def pluginVersion = project.version.toString()

repositories {
    mavenCentral()
    maven { url = "https://repo.papermc.io/repository/maven-public/" }
    maven { url = "https://oss.sonatype.org/content/groups/public/" }
}

dependencies {
    compileOnly "io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT"

    // Testing
    testImplementation platform("org.junit:junit-bom:5.13.4")
    testImplementation "org.junit.jupiter:junit-jupiter"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
    testImplementation "org.mockito:mockito-core:5.19.0"
    testImplementation 'org.mockbukkit.mockbukkit:mockbukkit-v1.21:4.0.0'

    // Shaded libs
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
    implementation 'com.google.code.gson:gson:2.13.2'
    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
}

test {
    useJUnitPlatform()
    testLogging { events "passed", "skipped", "failed" }
    jvmArgs "-XX:+EnableDynamicAgentLoading", "-Djdk.instrument.traceUsage"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release.set(21)
}

processResources {
    inputs.property('version', pluginVersion)
    filteringCharset 'UTF-8'

    filesMatching('plugin.yml') {
        expand(version: pluginVersion)
    }
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    preserveFileTimestamps = false
    reproducibleFileOrder = true

    from sourceSets.main.output

    dependsOn configurations.runtimeClasspath
    from {
        configurations.runtimeClasspath
            .findAll { it.exists() }
            .collect { it.isDirectory() ? it : zipTree(it) }
    }

    exclude 'org/mockbukkit/**'
    exclude 'junit/**'
    exclude 'org/junit/**'
    exclude 'org/mockito/**'
}
